# atlas-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: nightly.yml  pr-check.yml
atlas/: __init__.py  __main__.py
atlas/api/: __init__.py  server.py  websocket.py
atlas/api/routes/: auth.py  memory.py  personas.py  settings.py  skills.py
atlas/core/: __init__.py  config.py  events.py  llm.py  orchestrator.py
atlas/memory/: __init__.py  manager.py  sqlite_store.py  vector_store.py
atlas/security/: __init__.py
atlas/security/auth/: __init__.py  pin.py
atlas/skills/: __init__.py  app_launcher.py  base.py  calculator.py  clipboard.py  code_executor.py  datetime_skill.py  file_manager.py  manifest.yaml  screenshot_ocr.py  system_monitor.py  volume_control.py  weather.py  web_browsing.py  web_search.py  wikipedia.py
atlas/telemetry/: __init__.py  crash_reporter.py
atlas/ui/: __init__.py
atlas/utils/: __init__.py  logging.py
atlas/voice/: __init__.py  pipeline.py  stt.py  tts.py  wake_word.py
atlas/voice/personas/: aria.atlasvoice  atlas_default.atlasvoice  echo.atlasvoice  nova.atlasvoice  orion.atlasvoice  rex.atlasvoice  sage.atlasvoice  zara.atlasvoice
config/: defaults.yaml
tests/integration/fixtures/: mock_biometric.py  mock_llm.py
tests/unit/: test_config.py  test_events.py  test_pin.py
