[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-ai"
version = "0.1.0-alpha"
description = "Adaptive Thinking & Layered Autonomy System — AI desktop assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ATLAS Core Team" }]
keywords = ["ai", "assistant", "llm", "voice", "jarvis"]

dependencies = [
    # STT
    "openai-whisper>=20231117",
    # LLM clients
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    # Orchestration
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    # Memory
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    # Voice
    "pyaudio>=0.2.14",
    "elevenlabs>=1.5.0",
    "kokoro-tts>=0.9.0",
    "openWakeWord>=0.6.0",
    # OS automation
    "pyautogui>=0.9.54",
    "psutil>=5.9.0",
    "Pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "playwright>=1.44.0",
    # Data / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "PyYAML>=6.0.1",
    # Security
    "cryptography>=42.0.0",
    "bcrypt>=4.1.0",
    # Auth — biometric
    "resemblyzer>=0.1.3",
    "insightface>=0.7.3",
    "mediapipe>=0.10.14",
    "python-fido2>=1.1.2",
    # API
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    # UI
    "PyQt6>=6.7.0",
    "pyqtgraph>=0.13.0",
    # Notifications + updates
    "plyer>=2.1.0",
    "desktop-notifier>=5.0.0",
    "update-checker>=0.18.0",
    # Telemetry + logging
    "sentry-sdk>=2.5.0",
    "structlog>=24.1.0",
    # HTTP
    "requests>=2.32.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
macos  = ["pyobjc-framework-LocalAuthentication>=10.3"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "types-PyYAML",
    "types-requests",
    "types-bcrypt",
]

[project.scripts]
atlas = "atlas.__main__:main"

# ── Ruff (linter + formatter) ─────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["atlas", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "TCH", "ANN"]
ignore  = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

# ── Mypy (strict type checking) ───────────────────────────────
[tool.mypy]
python_version       = "3.11"
strict               = true
warn_return_any      = true
warn_unused_configs  = true
ignore_missing_imports = true  # third-party stubs vary

# ── Pytest ────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode   = "auto"
testpaths      = ["tests"]
addopts        = "--cov=atlas --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["atlas"]
omit   = ["atlas/__main__.py", "tests/*"]

# ── Hatch build ───────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["atlas"]
